[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chouleme-pro"
version = "1.0.0"
description = "批量视频抽帧与智能去重桌面工具（免费开源版，基于 CustomTkinter）"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# 匿名开源，不署具体人名
# authors = [{ name = "" }]
keywords = ["video", "ffmpeg", "frame-extraction", "dedup", "customtkinter", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "customtkinter>=5.2.0",
    "pillow",
    "darkdetect",
]

[project.urls]
Homepage = "https://github.com/yydshy/chouleme-pro"
Repository = "https://github.com/yydshy/chouleme-pro"
Issues = "https://github.com/yydshy/chouleme-pro/issues"

[project.scripts]
chouleme = "chouleme_pro:run_pro_main"

[tool.setuptools]
py-modules = ["chouleme_pro"]
